--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ head(as.data.frame(mean_stats))
 <li>Skype Chat for discussions: <a href="https://join.skype.com/gjN0CfAd4bhg">https://join.skype.com/gjN0CfAd4bhg</a></li>
 <li><a href="https://www.jstatsoft.org/article/view/v040i01">The Split-Apply-Combine Strategy for Data Analysis</a></li>
 <li><a href="http://www.burns-stat.com/pages/Tutor/R_inferno.pdf">The R Inferno</a></li>
-<li>Try different solution for the last exercise.</li>
+<li>Try different solution for the last exercise</li>
 </ul>
 
   </article>
